# app/Http/Controllers/FlashcardController.php
@@ -9,8 +9,6 @@ use App\Helpers\ApiResponse;
 use App\Helpers\Score;
 use App\Models\Flashcard;
 use App\Models\Scorecard;
-use App\Models\Tag;
-use App\Repositories\FlashcardRepository;
 use App\Services\FlashcardService;
 use App\Transformers\FlashcardTransformer;
 use App\Transformers\ScorecardTransformer;
@@ -22,12 +20,10 @@ use Illuminate\Validation\UnauthorizedException;
 
 class FlashcardController extends Controller
 {
-    protected FlashcardRepository $repository;
     protected FlashcardService $service;
 
-    public function __construct(FlashcardRepository $repository, FlashcardService $service)
+    public function __construct(FlashcardService $service)
     {
-        $this->repository = $repository;
         $this->service = $service;
     }
 
@@ -38,13 +34,14 @@ class FlashcardController extends Controller
      *     description="Return all flashcards that are not in the graveyard, for the current user, paginated",
      *     tags={"flashcard"},
      *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response="403", description="Not permitted"),
      *     security={{"bearerAuth":{}}}
      * )
      */
     public function index(Request $request): JsonResponse
     {
         try {
-            $flashcards = $this->repository->alive($request->user());
+            $flashcards = $this->service->alive();
         } catch (UnauthorizedException) {
             return $this->handleForbidden();
         }
@@ -59,13 +56,14 @@ class FlashcardController extends Controller
      *     description="Return all flashcards - alive or buried - for the current user, paginated",
      *     tags={"flashcard"},
      *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response="403", description="Not permitted"),
      *     security={{"bearerAuth":{}}}
      * )
      */
     public function all(Request $request): JsonResponse
     {
         try {
-            $flashcards = $this->repository->allFlashcards($request->user());
+            $flashcards = $this->service->all();
         } catch (UnauthorizedException) {
             return $this->handleForbidden();
         }
@@ -75,23 +73,31 @@ class FlashcardController extends Controller
 
     /**
      * @OA\Get(
-     *     path="/api/flashcards/graveyard",
-     *     summary="Get all flashcards currently in the graveyard",
-     *     description="'Buried' flashcards are those which have been anwered correctly on the Hard difficulty",
+     *     path="/api/flashcards/{id}",
+     *     summary="Show a flashcard",
      *     tags={"flashcard"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         @OA\Schema(type="integer")
+     *     ),
      *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response="404", description="Model not found"),
+     *     @OA\Response(response="403", description="Not permitted"),
      *     security={{"bearerAuth":{}}}
      * )
      */
-    public function graveyard(Request $request): JsonResponse
+    public function show(Request $request, int $id): JsonResponse
     {
         try {
-            $flashcards = $this->repository->buried($request->user());
+            $flashcardResponse = $this->service->show($id);
+        } catch (ModelNotFoundException) {
+            return $this->handleNotFound();
         } catch (UnauthorizedException) {
             return $this->handleForbidden();
         }
 
-        return fractal($flashcards, new FlashcardTransformer())->respond();
+        return fractal($flashcardResponse, new FlashcardTransformer())->respond();
     }
 
     /**
@@ -111,42 +117,121 @@ class FlashcardController extends Controller
      *         )
      *     ),
      *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response="403", description="Not permitted"),
      *     security={{"bearerAuth":{}}}
      * )
      */
-    public function store(Request $request)
+    public function store(Request $request): JsonResponse
     {
         $request->validate([
             'text' => 'required|max:1024'
         ]);
 
+        try {
+            $flashcardResponse = $this->service->store($request->all());
+        } catch (UnauthorizedException) {
+            return $this->handleForbidden();
+        }
+
         // TODO: validation and storage
+
+        return fractal($flashcardResponse, new FlashcardTransformer())->respond();
     }
 
     /**
-     * @OA\Get(
+     * @OA\Patch(
      *     path="/api/flashcards/{id}",
-     *     summary="Show a flashcard",
+     *     summary="Update flashcard",
      *     tags={"flashcard"},
      *     @OA\Parameter(
      *         name="id",
      *         in="path",
      *         @OA\Schema(type="integer")
      *     ),
+     *     @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="text",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *     ),
      *     @OA\Response(response="200", description="Success"),
-     *     @OA\Response(response="404", description="Flashcard not found"),
+     *     @OA\Response(response="404", description="Model not found"),
+     *     @OA\Response(response="403", description="Not permitted"),
      *     security={{"bearerAuth":{}}}
      * )
      */
-    public function show(Request $request, Flashcard $flashcard): JsonResponse
+    public function update(Request $request, int $id): JsonResponse
     {
+        $request->validate([
+            'text' => 'required|max:1024'
+        ]);
+        // TODO validation
+
         try {
-            $flashcardResponse = $this->repository->findFlashcard($flashcard, $request->user());
+            $flashcardResponse = $this->service->update($request->all(), $id);
         } catch (ModelNotFoundException) {
             return $this->handleNotFound();
+        } catch (UnauthorizedException) {
+            return $this->handleForbidden();
         }
 
         return fractal($flashcardResponse, new FlashcardTransformer())->respond();
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/flashcards/{id}",
+     *     summary="Delete flashcard",
+     *     tags={"flashcard"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response="204", description="No content"),
+     *     @OA\Response(response="404", description="Model not found"),
+     *     @OA\Response(response="403", description="Not permitted"),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
+    public function destroy(Request $request, int $id): Response|JsonResponse
+    {
+        try {
+            $this->service->destroy($id);
+        } catch (ModelNotFoundException) {
+            return $this->handleNotFound();
+        } catch (UnauthorizedException) {
+            return $this->handleForbidden();
+        }
+
+        return response()->noContent();
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/flashcards/graveyard",
+     *     summary="Get all flashcards currently in the graveyard",
+     *     description="'Buried' flashcards are those which have been anwered correctly on the Hard difficulty",
+     *     tags={"flashcard"},
+     *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response="403", description="Not permitted"),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
+    public function graveyard(Request $request): JsonResponse
+    {
+        try {
+            $flashcards = $this->service->buried($request->user());
+        } catch (UnauthorizedException) {
+            return $this->handleForbidden();
+        }
+
+        return fractal($flashcards, new FlashcardTransformer())->respond();
     }
 
     /**
@@ -156,14 +241,15 @@ class FlashcardController extends Controller
      *     summary="Get a random flashcard",
      *     tags={"flashcard"},
      *     @OA\Response(response="200", description="Success"),
-     *     @OA\Response(response="404", description="Flashcard not found"),
+     *     @OA\Response(response="404", description="Model not found"),
+     *     @OA\Response(response="403", description="Not permitted"),
      *     security={{"bearerAuth":{}}}
      * )
      */
     public function random(Request $request): JsonResponse
     {
         try {
-            $flashcardResponse = $this->repository->randomFlashcard($request->user());
+            $flashcardResponse = $this->service->random();
         } catch (ModelNotFoundException) {
             return $this->handleNotFound();
         } catch (UnauthorizedException) {
@@ -185,14 +271,15 @@ class FlashcardController extends Controller
      *         @OA\Schema(type="integer")
      *     ),
      *     @OA\Response(response="200", description="Success"),
-     *     @OA\Response(response="404", description="Flashcard not found"),
+     *     @OA\Response(response="404", description="Model not found"),
+     *     @OA\Response(response="403", description="Not permitted"),
      *     security={{"bearerAuth":{}}}
      * )
      */
-    public function revive(Request $request, Flashcard $flashcard): JsonResponse
+    public function revive(Request $request, int $id): JsonResponse
     {
         try {
-            $flashcardResponse = $this->repository->reviveFlashcard($flashcard, $request->user());
+            $flashcardResponse = $this->service->revive($id);
         } catch (ModelNotFoundException) {
             return $this->handleNotFound();
         } catch (UnauthorizedException) {
@@ -226,7 +313,8 @@ class FlashcardController extends Controller
      *         )
      *     ),
      *     @OA\Response(response="200", description="Success"),
-     *     @OA\Response(response="404", description="Flashcard not found"),
+     *     @OA\Response(response="404", description="Model not found"),
+     *     @OA\Response(response="403", description="Not permitted"),
      *     security={{"bearerAuth":{}}}
      * )
      */
@@ -280,142 +368,5 @@ class FlashcardController extends Controller
         $scorecard->setTotalScore($request->user()->points);
 
         return fractal($scorecard, new ScorecardTransformer())->respond();
-    }
-
-    /**
-     * @OA\Patch(
-     *     path="/api/flashcards/{id}",
-     *     summary="Update flashcard",
-     *     tags={"flashcard"},
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         @OA\Schema(type="integer")
-     *     ),
-     *     @OA\RequestBody(
-     *         @OA\MediaType(
-     *             mediaType="application/json",
-     *             @OA\Schema(
-     *                 @OA\Property(
-     *                     property="text",
-     *                     type="string"
-     *                 )
-     *             )
-     *         )
-     *     ),
-     *     @OA\Response(response="200", description="Success"),
-     *     @OA\Response(response="404", description="Flashcard not found"),
-     *     security={{"bearerAuth":{}}}
-     * )
-     */
-    public function update(Request $request, Flashcard $flashcard): JsonResponse
-    {
-        $request->validate([
-            'text' => 'required|max:1024'
-        ]);
-        // TODO validation
-
-        try {
-            $flashcardResponse = $this->repository->updateFlashcard($request->all(), $flashcard, $request->user());
-        } catch (ModelNotFoundException) {
-            return $this->handleNotFound();
-        } catch (UnauthorizedException) {
-            return $this->handleForbidden();
-        }
-
-        return fractal($flashcardResponse, new FlashcardTransformer())->respond();
-    }
-
-    /**
-     * @OA\Delete(
-     *     path="/api/flashcards/{id}",
-     *     summary="Delete flashcard",
-     *     tags={"flashcard"},
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         @OA\Schema(type="integer")
-     *     ),
-     *     @OA\Response(response="204", description="No content"),
-     *     security={{"bearerAuth":{}}}
-     * )
-     */
-    public function destroy(Request $request, Flashcard $flashcard): Response|JsonResponse
-    {
-        try {
-            $this->repository->destroyFlashcard($flashcard, $request->user());
-        } catch (ModelNotFoundException) {
-            return $this->handleNotFound();
-        } catch (UnauthorizedException) {
-            return $this->handleForbidden();
-        }
-
-        return response()->noContent();
-    }
-
-    /**
-     * @OA\Post(
-     *     path="/api/flashcards/{id}/tags/{tag}",
-     *     summary="Attach a tag to a flashcard",
-     *     description="Attach a tag",
-     *     tags={"flashcard"},
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         @OA\Schema(type="integer")
-     *     ),
-     *     @OA\Parameter(
-     *         name="tag",
-     *         in="path",
-     *         @OA\Schema(type="integer")
-     *     ),
-     *     @OA\Response(response="200", description="Success"),
-     *     security={{"bearerAuth":{}}}
-     * )
-     */
-    public function attachTag(Request $request, Flashcard $flashcard, Tag $tag): JsonResponse
-    {
-        try {
-            $flashcardResponse = $this->repository->attachTag($flashcard, $request->user(), $tag);
-        } catch (ModelNotFoundException) {
-            return $this->handleNotFound();
-        } catch (UnauthorizedException) {
-            return $this->handleForbidden();
-        }
-
-        return fractal($flashcardResponse, new FlashcardTransformer())->respond();
-    }
-
-    /**
-     * @OA\Delete(
-     *     path="/api/flashcards/{id}/tags/{tag}",
-     *     description="Detach a tag from a flashcard",
-     *     summary="Detach a tag",
-     *     tags={"flashcard"},
-     *     @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         @OA\Schema(type="integer")
-     *     ),
-     *     @OA\Parameter(
-     *         name="tag",
-     *         in="path",
-     *         @OA\Schema(type="integer")
-     *     ),
-     *     @OA\Response(response="200", description="Success"),
-     *     security={{"bearerAuth":{}}}
-     * )
-     */
-    public function detachTag(Request $request, Flashcard $flashcard, Tag $tag)
-    {
-        try {
-            $flashcardResponse = $this->repository->detachTag($flashcard, $request->user(), $tag);
-        } catch (ModelNotFoundException) {
-            return $this->handleNotFound();
-        } catch (UnauthorizedException) {
-            return $this->handleForbidden();
-        }
-
-        return fractal($flashcardResponse, new FlashcardTransformer())->respond();
     }
 }
